{
    "name": "PlayerController",
    "maps": [
        {
            "name": "playerControl",
            "id": "cf9b70b5-5102-4d62-9b9f-931de4e1ba23",
            "actions": [
                {
                    "name": "Move",
                    "type": "PassThrough",
                    "id": "65f3a365-4c9c-4596-af65-fe1f2f63d7e4",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "CameraMove",
                    "type": "PassThrough",
                    "id": "9e5d6e86-e92b-4a7c-bf4a-969b7d304e0c",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "3329cff7-e93d-4b1d-b628-a97210e361a5",
                    "path": "2DVector(mode=2)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "a9510728-cb7d-4b76-861b-8a284c1304c9",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "b2e66fcc-0af0-47e6-98d7-abcf5fb9a2d2",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "ac4920b4-640d-4c5e-8c07-d34762ec1ffa",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "08b71a21-4890-4502-b66c-4ea0e53fa463",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "67fa1f29-bfd1-4071-850b-2e7493cee0dc",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CameraMove",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "playerActions",
            "id": "b11c16a6-9a51-4b82-bb64-0c088f726516",
            "actions": [
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "bcf81d80-cf3e-4909-a31d-694ecabc77b1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "f025dac2-ec54-4e19-a53f-0b2a537e213b",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}